--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
 @font-face {
-    font-family: "Comfortaa";
+    font-family: 'Comfortaa', serif;
+    font-style: normal;
     src: url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+}
+@font-face {
+    font-family: 'Rubik Bubbles', serif;
+    font-style: normal;
+    src: url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Rubik+Bubbles&display=swap');
+}
+
+h1{
+    font-family: 'Comfortaa', sans-serif;
+}
+
+h1{
+    font-family: 'RubikBubbles', sans-serif;
 }
